--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,5 @@ venv
 config.ini
 gevent-20.6.2-cp38-cp38-win32.whl
 /venv/
-/flaskr/__pycache__/
-/flaskr/lib/__pycache__/
-/flaskr/lib/models/__pycache__/
-/flaskr/lib/repository/__pycache__/
+*__pycache__*
 
